--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,11 +1,10 @@
 /*!
  * Bootstrap v3.0.3 (http://getbootstrap.com)
  * Copyright 2013 Twitter, Inc.
- * Licensed under http://www.apache.org/licenses/LICENSE-2.0
+ * Licensed under http://www.apache.org/licenses/LICENSE-2.0     micro test de qualité
  */
 
-/*! normalize.css v2.1.3 | MIT License | git.io/normalize */
-
+/*! normalize.css v2.1.3 | MIT License | git.io/normalize *
 article,
 aside,
 details,
